# kagi

./: .editorconfig  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .therapist.yml  CHANGELOG.md  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.rst  RELEASE.md  pyproject.toml  setup.py  tasks.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  main.yml  pypi-package.yml
docs/: community.rst  conf.py  customization.rst  index.rst  requirements.txt  troubleshooting.rst
docs/_templates/: page.html
kagi/: __init__.py  admin.py  apps.py  constants.py  forms.py  models.py  oath.py  settings.py  urls.py  util.py  views.py
kagi/management/commands/: addbackupcode.py
kagi/migrations/: 0001_initial.py  0002_alter_backupcode_totp_webauthnkey_ids.py  0002_auto_20190821_1436.py  0002_remove_webauthnkey_ukey.py  0002_webauthnkey.py  0003_delete_u2fkey.py
kagi/static/kagi/: kagi.js  webauthn.js
kagi/templates/kagi/: add_key.html  add_webauthn.html  backup_codes.html  base.html  key_list.html  login.html  totp_device.html  totpdevice_list.html  two_factor_settings.html  verify_second_factor.html
kagi/templatetags/: json.py
kagi/tests/: test_admin.py  test_backups_code.py  test_totp.py  test_two_factor_settings.py  test_util.py  test_webauthn.py  test_webauthn_keys.py
kagi/utils/: __init__.py  webauthn.py
kagi/views/: __init__.py  api.py  backup_codes.py  login.py  mixin.py  totp_devices.py  webauthn_keys.py
testproj/: manage.py
testproj/templates/: base.html
testproj/testproj/: settings.py  urls.py  wsgi.py
