[tool.poetry]
name = "kagi"
version = "0.1.0"
description = "Django app for WebAuthn and TOTP-based multi-factor authentication"
authors = ["Justin Mayer <entroP@gmail.com>", "Rémy Hubscher <hubscher.remy@gmail.com>"]
license = "BSD-2-Clause"
readme = "README.rst"
keywords = ["Django", "WebAuthn", "authentication", "MFA", "2FA"]

repository = "https://github.com/justinmayer/kagi"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Tracker" = "https://github.com/justinmayer/kagi/issues"

[tool.poetry.dependencies]
Django = ">= 2.2, < 4.0"
python = "^3.6"
qrcode = "^6.1"
webauthn = "^0.4.5"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
flake8 = "^3.8"
flake8-black = "^0.2.0"
invoke = "^1.3"
isort = "^5.2"
livereload = "^2.6"
psutil = {version = "^5.7", optional = true}
pyOpenSSL = "^19.0"
pytest = "^6.0"
pytest-cov = "^2.7"
pytest-django = "^4.0"
pytest-pythonpath = "^0.7.3"
pytest-sugar = "^0.9.4"
pytest-xdist = "^2.1"
sphinx = "^2.2"
sphinx_rtd_theme = "^0.4.3"
Werkzeug = "^1.0"

[tool.isort]
# Maintain compatibility with Black
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate `django` and `kagi` as separate sections
known_django = "django"
known_kagi = "kagi"

sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,KAGI,FIRSTPARTY,LOCALFOLDER"

# Skip isort checks on these directories and files
skip_glob = "**/migrations/**,**/node_modules/**,kagi/static/**,static,*.json,*.json"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"
