[tool.poetry]
name = "kagi"
version = "0.2.0"
description = "Django app for WebAuthn and TOTP-based multi-factor authentication"
authors = ["Justin Mayer <entroP@gmail.com>", "Rémy Hubscher <hubscher.remy@gmail.com>"]
license = "BSD-2-Clause"
readme = "README.rst"
keywords = ["Django", "WebAuthn", "authentication", "MFA", "2FA"]

repository = "https://github.com/justinmayer/kagi"
documentation = "https://kagi.readthedocs.io"

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.2",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/justinmayer/kagi/issues"

[tool.poetry.dependencies]
Django = ">= 2.2, < 4.0"
python = ">= 3.7, < 4.0"
qrcode = ">= 6.1, < 8.0"
webauthn = "^0.4"

[tool.poetry.dev-dependencies]
black = "^22.3"
flake8 = "^4.0"
flake8-black = "^0.3"
furo = "2022.04.07"
invoke = "^1.3"
isort = "^5.2"
livereload = "^2.6"
psutil = {version = "^5.7", optional = true}
pyOpenSSL = "^21.0"
pytest = "^6.0"
pytest-cov = "^3.0"
pytest-django = "^4.0"
pytest-pythonpath = "^0.7"
pytest-sugar = "^0.9"
pytest-xdist = "^2.1"
sphinx = "^4.0"
Werkzeug = "^2.0"

[tool.autopub]
project-name = "Kagi"
git-username = "botpub"
git-email = "botpub@autopub.rocks"
append-github-contributor = true

[tool.isort]
# Maintain compatibility with Black
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate `django` and `kagi` as separate sections
known_django = "django"
known_kagi = "kagi"

sections = "FUTURE,STDLIB,DJANGO,THIRDPARTY,KAGI,FIRSTPARTY,LOCALFOLDER"

# Skip isort checks on these directories and files
skip_glob = "**/migrations/**,**/node_modules/**,kagi/static/**,static,*.json,*.json"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
